test/loop/confidence/errors/func_call_errors_3.loop
# Errors in pattern matching functions

func() ->
  x.call(1 ,)

